// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <ForwardRef(Box)
    sx={
      Object {
        "my": 3,
        "textAlign": "center",
      }
    }
  >
    <a
      href="/"
    >
      <Image
        src="logo-blue.png"
        width="200px"
      />
    </a>
  </ForwardRef(Box)>
  <ForwardRef(Box)
    sx={
      Object {
        "maxWidth": 500,
        "mt": 3,
        "mx": "auto",
      }
    }
  >
    <ForwardRef(Typography)
      align="center"
      sx={
        Object {
          "mb": 2,
        }
      }
    >
      下のボタンをクリックして登録を完了させてください。
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      align="center"
    >
      <ForwardRef(LoadingButton)
        loading={false}
        onClick={[Function]}
        variant="outlined"
      >
        アカウント有効化
      </ForwardRef(LoadingButton)>
    </ForwardRef(Typography)>
  </ForwardRef(Box)>
</Fragment>
`;

exports[`Shallow Snapshot Tests success case 1`] = `
<Fragment>
  <ForwardRef(Box)
    sx={
      Object {
        "my": 3,
        "textAlign": "center",
      }
    }
  >
    <a
      href="/"
    >
      <Image
        src="logo-blue.png"
        width="200px"
      />
    </a>
  </ForwardRef(Box)>
  <ForwardRef(Box)
    sx={
      Object {
        "maxWidth": 500,
        "mt": 3,
        "mx": "auto",
      }
    }
  >
    <ForwardRef(Alert)
      severity="success"
      sx={
        Object {
          "mb": 3,
        }
      }
    >
      ユーザー登録が完了しました。
    </ForwardRef(Alert)>
    <ForwardRef(Typography)
      align="center"
    >
      元々のページに戻り、登録した内容でログインしてください。
    </ForwardRef(Typography)>
  </ForwardRef(Box)>
</Fragment>
`;
